API docs for deletePost Endpoint
